# welliver.me

./: .babelrc  .gitignore  Makefile  README.md  babel.config.js  data.json  package-lock.json  package.json  plan.md  server.js  tsconfig.json  webpack.config.js
.github/workflows/: azure-static-web-apps-jolly-sea-077866e0f.yml  azure-static-web-apps-thankful-flower-071751f0f.yml  deploy.yml
backend/: README.md  package-lock.json  package.json  tsconfig.json
backend/NegotiateSignalr/: function.json  index.ts
backend/TileFetch/: function.json  index.ts
backend/TileReseed/: TileSamples.ts  function.json  index.ts  recreateContainer.ts
backend/TileUpdate/: function.json  index.ts
frontend/: .babelrc  index.tsx  package-lock.json  package.json  root.tsx  tsconfig.json  webpack.config.js
frontend/api/: SignalrWebsocketConnection.ts
frontend/components/: Overlay.tsx  Tile.tsx  TileLayout.tsx
frontend/hooks/: useTiles.tsx  useWebsocketConnection.tsx
frontend/html/: index.dev.html  index.prod.html
frontend/src/: index.tsx  root.tsx
frontend/style/: ErrorBoundary.scss  Overlay.scss  index.scss
frontend/webpack/: common.js  dev.js  prod.js
old/: poetry.old.js
old/poetry/: Connection.js  Poetry.js  Tile.js
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
server/: NewPoetryServer.js  PoetryServer.js
src/: index.html  index.js
src/components/: GridLayout.js  MainLayout.js  Tile.js
stack/: docker-compose.dev.yml  docker-compose.yml
tile/: config.ts  index.ts  package-lock.json  package.json  tiles.ts  tsconfig.json  types.ts  utils.ts
(+96 files in other folders)
