[package]
name = "magnet-state"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
mqtt5-wasm = { version = "1.3.0", default-features = false, features = ["client"] }
mqtt5-protocol = "0.11.0"

[profile.release]
opt-level = "s"
lto = true
